@@ -1,3 +1,13 @@
+2005-01-31  mallum,,,  <mallum@openedhand.com>
+
+	* test-fb.c:
+	add missing include
+	* test-freetype.c: (framebuffer_close), (framebuffer_blit):
+	basically fix and make work
+	* test-gdk.c: (main):
+	* test-pango-layout.c: (main):
+	Turn off double buffering
+
 2005-01-28  mallum,,,  <mallum@openedhand.com>
 
 	* Makefile.am:
